# bacon

./: .gitignore  CMakeLists.txt  main.cpp  resources.qrc
lib/connector/: CMakeLists.txt
lib/connector/include/config/: config.h
lib/connector/include/mqtt_connector/: connection_manager.h  message_handler.h  mqtt_client.h
lib/connector/include/navigator/: navigator.h
lib/connector/src/: connection_manager.cpp  message_handler.cpp  mqtt_client.cpp
lib/connector/src/config/: config.cpp
lib/connector/src/mqtt_connector/: connection_manager.cpp  mqtt_client.cpp
lib/connector/src/navigator/: navigator.cpp
lib/model/: CMakeLists.txt  model.cpp  model.hpp
lib/view/: CMakeLists.txt
lib/view/beaconeditor/: CMakeLists.txt  beaconeditor.cpp  beaconeditor.hpp  beaconeditor.ui
lib/view/mainwindow/: CMakeLists.txt  mainwindow.cpp  mainwindow.hpp  mainwindow.ui
lib/view/model/: CMakeLists.txt  beacons.cpp  beacons.hpp  model.cpp  model.hpp
lib/view/pathcontroller/: CMakeLists.txt  pathcontroller.cpp  pathcontroller.hpp  pathcontroller.ui  utils.cpp  utils.hpp
lib/view/scene/: CMakeLists.txt  beaconitem.hpp  const.hpp  espitem.hpp  griditem.hpp  scene.cpp  scene.hpp  waveitem.hpp
